Adds text logo, not svg.

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -2,9 +2,14 @@
 <div class="page-header container">
     <div class="nav-container">
         <a href="./index.html" class="logo link" aria-label="Логотип сайта" lang="en">
-            <svg class="logo-icon">
-                <use class="logo-main" href="./images/sprite.svg#logo-main"></use>
-            </svg>
+            <div class="logo-main-container">
+                <span class="logo-text">Hell</span>
+                <svg class="logo-icon">
+                    <use href="./images/sprite.svg#Fire"></use>
+                </svg>
+                <span class="logo-text">EN</span>
+            </div>
+            <span class="logo-description">Адский Английский</span>
         </a>
         <button type="button" class="menu-btn" aria-expanded="false" aria-controls="menu" data-menu-button>
             <svg class="menu-btn-icon" width="20px" height="12px" aria-label="Перекючатель мобильного меню">
@@ -16,9 +21,14 @@
     <div class="menu" id="menu" data-menu>
         <nav class="nav">
             <a href="./index.html" class="logo-dark link" aria-label="Логотип сайта" lang="en">
-                <svg class="logo-icon">
-                    <use class="logo-dark" href="./images/sprite.svg#logo-dark"></use>
-                </svg>
+                <div class="logo-main-container">
+                    <span class="logo-text dark-theme">Hell</span>
+                    <svg class="logo-icon">
+                        <use href="./images/sprite.svg#Fire"></use>
+                    </svg>
+                    <span class="logo-text dark-theme">EN</span>
+                </div>
+                <span class="logo-description dark-theme"">Адский Английский</span>
             </a>
             <ul class="nav-list list">
                 <li class="nav-item">
