--- a/src/sass/layouts/_guarantee.scss
+++ b/src/sass/layouts/_guarantee.scss
@@ -1,9 +1,19 @@
+.guarantee {
+  padding-top:50px;
+}
+
 .guarantee-wrapper {
 background-color: $sec-ligth-bg;
 padding-top: 30px;
 padding-bottom: 30px;
 padding-left: 6px;
-// padding-right: 20px;
+
+@media screen and (min-width: 1314px){
+padding-top: 45px;
+padding-bottom: 45px;
+padding-left: 112px;
+padding-right: 112px;
+}
 }
 
 .accent-color {
@@ -11,7 +21,6 @@ padding-left: 6px;
 }
 
 .guarantee-title {
-margin-top: 50px;
 margin-bottom: 30px;
 font-family: "Montserrat", sans-serif;
 font-weight: 800;
@@ -32,15 +41,14 @@ line-height: 1.67;
 
 color: $sec-light-font;
 
-// width: 100%;
 }
 .guarantee-item {
 position: relative;
 
-  padding-left: 28px;
-  padding-bottom: 30px;
+padding-left: 28px;
+padding-bottom: 23px;
 
-  border-left: 1px dashed $light-font;
+border-left: 1px dashed $light-font;
 
   &:last-child {
     padding-bottom: 0px; 
@@ -63,4 +71,20 @@ position: relative;
     // background-position: 50%;
     // background-size: cover;
 }
+
+@media screen and (min-width: 768px){
+  padding-left: 32px;
+  padding-bottom: 20px;
+}
+
+@media screen and (min-width: 1314px){
+  padding-left: 41px;
+  padding-bottom: 20px;
+}
+
+// .guarantee-list {
+//   @media screen and (min-width: 1314px){
+//   text-align: center;
+// }
+// }
 }
