--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -24,7 +24,13 @@
     margin-bottom: 50px;
   }
 }
+@media screen and (min-width: 320px) {
+  .image-teacher {
+    margin-bottom: 20px;
+  }
+}
 .teacher-name {
+  display: inline-block;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 800;
@@ -32,13 +38,23 @@
   line-height: 1.2;
   letter-spacing: 0.08em;
   color: var(--title-text-color);
-  margin-bottom: 10px;
+  padding-bottom: 10px;
+  width: 280px;
+  border-bottom: 1px solid #b9b9b9;
+}
+@media screen and (min-width: 768px) {
+  .teacher-name {
+    border-bottom: 1px solid #b9b9b9;
+    width: 401px;
+  }
 }
 @media screen and (min-width: 1344px) {
   .teacher-name {
     font-size: 30px;
     line-height: 1.123;
     margin-bottom: 15px;
+    border-bottom: 1px solid #b9b9b9;
+    width: 640px;
   }
 }
 
@@ -51,13 +67,35 @@
   letter-spacing: 0.06em;
   color: var(--title-text-color);
 }
+@media screen and (min-width: 320px) {
+  .teacher-list-item {
+    margin-bottom: 5px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .teacher-list-item {
+    font-size: 16px;
+    line-height: 1.25;
+    margin-bottom: 15px;
+  }
+}
+
 .teacher-list-container-text {
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 20px;
+  line-height: 1.666;
   color: var(--secondary-text-color);
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 1344px) {
+  .teacher-list-container-text {
+    font-size: 18px;
+    line-height: 1.555;
+    margin-bottom: 20px;
+  }
 }
 .teacher-link {
   font-family: Montserrat;
@@ -102,6 +140,7 @@
     padding-bottom: 50px;
   }
 }
+
 @media screen and (min-width: 1344px) {
   .teacher {
     padding-top: 329px;
