--- a/src/sass/layouts/_guarantee.scss
+++ b/src/sass/layouts/_guarantee.scss
@@ -31,7 +31,12 @@ letter-spacing: 0.03em;
 
 color: $dark-font;
 
+@media screen and (min-width: 1314px){
+font-size: 46px;
+line-height: 1.3;
 }
+}
+
 .guarantee-desc {
 
 font-family: "Montserrat", sans-serif;
@@ -41,7 +46,12 @@ line-height: 1.67;
 
 color: $sec-light-font;
 
+@media screen and (min-width: 1314px){
+font-size: 20px;
+line-height: 1.4;
 }
+}
+
 .guarantee-item {
 position: relative;
 
