--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -1,239 +1,250 @@
-  
-
-   .program {
-    position: relative;
-    background: var(--secondary-bg-color);
-    padding-top: 50px;
-    padding-bottom: 537px;
-    // height: 1463px;
+.program {
+  position: relative;
+  background: var(--secondary-bg-color);
+  padding-top: 50px;
+  padding-bottom: 537px;
+  // height: 1463px;
 }
 
-
-
-.program-title{
-    text-align: center;
-    margin-bottom: 43px;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 130%;
-    color: var(--secondary-title-color);
-
+.program-title {
+  text-align: center;
+  margin-bottom: 43px;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 130%;
+  color: var(--secondary-title-color);
 }
-
 
 .program-list {
-position: relative;
-   
-    margin-left: 94px;
- 
- border-left: 1px solid  var(--secondary-title-color);
- left: 0px;
- top: 0px;
- /* height: 1288px ; */
- 
-    
+  position: relative;
+
+  margin-left: 94px;
+
+  border-left: 1px solid var(--secondary-title-color);
+  left: 0px;
+  top: 0px;
+  /* height: 1288px ; */
 }
 
 .program-item {
-    position: relative;
-    text-align: center;
-    margin-left: 26px;
+  position: relative;
+  text-align: center;
+  margin-left: 26px;
 }
 
-.program-item:nth-child(-n + 4)  {
-    margin-bottom: 40px;
-  }
+.program-item:nth-child(-n + 4) {
+  margin-bottom: 40px;
+}
 
 .program-item-title {
-    text-align: start;
-    margin-bottom: 5px;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 28px;
-    color: var(--secondary-title-color);
+  text-align: start;
+  margin-bottom: 5px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 28px;
+  color: var(--secondary-title-color);
 }
 
-.program-box{
-    display: flex;
+.program-box {
+  display: flex;
 }
 
-.hiding-square{
-    position: absolute;
-    top: 0;
-    left: -31px;
-   width: 10px;
-   height: 10px;
-   background-color: var(--secondary-bg-color);     
+.hiding-square {
+  position: absolute;
+  top: 0;
+  left: -31px;
+  width: 10px;
+  height: 10px;
+  background-color: var(--secondary-bg-color);
 }
 
-.hiding-square-bootom{
-    position: absolute;
-    bottom:  0;
-    left: -5px;
-   width: 10px;
-   height: 92px;
-   background-color: var(--secondary-bg-color);
+.hiding-square-bootom {
+  position: absolute;
+  bottom: 0;
+  left: -5px;
+  width: 10px;
+  height: 92px;
+  background-color: var(--secondary-bg-color);
 }
 
-
-.program-circl{
-    content: "";
-    position: absolute;
-    background-color: var(--accent-color);
-    border-color:  var(--accent-color);
-    left: -32px; 
-     top: 6px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    
+.program-circl {
+  content: '';
+  position: absolute;
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  left: -32px;
+  top: 6px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
 }
-
-
 
 /* // .program-semestry{
    
     
 // } */
 .program-semestry-item {
-    text-align: center;
-    margin-top: 8px;
-    
+  text-align: center;
+  margin-top: 8px;
 }
 .program-semestry-item:first-child {
-    margin-top: 0;
-
+  margin-top: 0;
 }
 .program-semestry-subtitle {
-    display: flex;
-    align-items: center;
-    text-align: start;
-    height: 32px;
-    margin-bottom: 5px;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 164.9%;
-    letter-spacing: 0.08em;
-    color: var(--accent-color);
-
+  display: flex;
+  align-items: center;
+  text-align: start;
+  height: 32px;
+  margin-bottom: 5px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 164.9%;
+  letter-spacing: 0.08em;
+  color: var(--accent-color);
 }
-
 
 .program-semestry-text {
-    text-align: start;
-    width: 143px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 20px;
-    color: var(--primary-text-color);
-    opacity: 0.5;
-    word-break: break-all;
+  text-align: start;
+  width: 143px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 20px;
+  color: var(--primary-text-color);
+  opacity: 0.5;
+  word-break: break-all;
 }
 
-// .program-picture{
-//         position: absolute;;
-//         right: 0;
-//         bottom: 440px;
-//         width: 108px;
-//         height: 137px;
-//         background-image: url('../images/program/program-bg-mob.png');
-//         background-size: 108px 137px;
+.program-picture {
+  position: absolute;
+  right: 0;
+  bottom: 440px;
+  width: 108px;
+  height: 137px;
+  background-image: url('../images/program/program-bg-mob.png');
+  background-size: 108px 137px;
 
-
-//         @media screen and (min-device-pixel-ratio: 2),
-//         screen and (min-resolution: 192dpi),
-//         screen and (min-resolution: 2dppx) {
-//         .program-picture{
-//           background-image: url('../images/program/program-bg-mob@2x.png');
-//         }
-//     }
-//  }
-    
-
-@media screen and (min-width: 768px) and (max-width: 1343px)  {
-    .program{
-        height: 1355px;
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .program-picture {
+      background-image: url('../images/program/program-bg-mob@2x.png');
     }
-
-    .program-semestry{
-        display: flex;
-    }
-    
-
-    .program-item:nth-child(-n + 4)  {
-        margin-bottom: 30px;
-    }
-
-    .program-semestry-item{
-          margin-right: 50px;
-    }
-
-    .program-picture{
-        position: absolute;
-        right: o;
-        bottom: 0;
-    }
+  }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+  .program {
+    height: 1355px;
+  }
+
+  .program-semestry {
+    display: flex;
+  }
+
+  .program-item:nth-child(-n + 4) {
+    margin-bottom: 30px;
+  }
+
+  .program-semestry-item {
+    margin-right: 50px;
+  }
+
+  .program-picture {
+    position: absolute;
+    right: o;
+    bottom: 0;
+  }
+  .program-picture {
+    position: absolute;
+    right: 0;
+    bottom: 243px;
+    width: 384px;
+    height: 280px;
+    background-repeat: no-repeat;
+    background-image: url('../images/program/program-bg-tab.png');
+    background-size: 384px 280px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .program-picture {
+        background-image: url('../images/program/program-bg-tab@2x.png');
+      }
+    }
+  }
+}
 
 @media screen and (min-width: 1344px) {
-    .program{
-        padding-top: 120px;
-        padding-bottom: 363px;
-    }
-    .program-list{
-        display: flex;
-        margin-left: 0;
-    }
-    .program-title{
-        text-align: start;
-        margin-bottom: 100px;
-        font-style: normal;
-        font-weight: 800;
-        font-size: 46px;
-        line-height: 130%;
-    }
-    .program-list{
-        border-left: none;
-        border-top: 1px solid  var(--secondary-title-color);
-        padding-top: 60px;
-    }
-    .program-item{
-        position: relative;
-        width: 240px;
-        margin-left: 0;
-        
-    }
-    .program-item:nth-child(-n + 4) {
-        margin-right: 30px;
-    }
+  .program {
+    padding-top: 120px;
+    padding-bottom: 363px;
+  }
+  .program-list {
+    display: flex;
+    margin-left: 0;
+  }
+  .program-title {
+    text-align: start;
+    margin-bottom: 100px;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 130%;
+  }
+  .program-list {
+    border-left: none;
+    border-top: 1px solid var(--secondary-title-color);
+    padding-top: 60px;
+  }
+  .program-item {
+    position: relative;
+    width: 240px;
+    margin-left: 0;
+  }
+  .program-item:nth-child(-n + 4) {
+    margin-right: 30px;
+  }
+  .program-circl {
+    position: absolute;
+    left: 0px;
+    top: -67px;
+  }
+  .program-item-title {
+    margin-bottom: 25px;
+  }
+  .program-semestry-item {
+    margin-top: 25px;
+  }
+  .program-semestry-subtitle {
+    margin-bottom: 10px;
+  }
+  .program-semestry-text {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .program-picture {
+    position: absolute;
 
-    // .program-box{
-    //     position: relative;
-    // }
-    .program-circl{
-        position: absolute;
-        left: 0px;
-        top: -67px;
+    right: 825px;
+    bottom: 59px;
+    width: 670px;
+    height: 502px;
+    background-repeat: no-repeat;
+    background-image: url('../images/program/program-bg-desk.png');
+    background-size: 670px 502px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      .program-picture {
+        background-image: url('../images/program/program-bg-desk@2x.png');
+      }
     }
-    .program-item-title{
-        margin-bottom: 25px;
-    }
-    .program-semestry-item{
-        margin-top: 25px;
-    }
-    .program-semestry-subtitle{
-        margin-bottom: 10px;
-    }
-    .program-semestry-text{
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 28px;
-        
-    }
+  }
 }
