--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -2,44 +2,47 @@
   text-align: center;
   margin-bottom: 30px;
 }
-.features-list {
-  width: 100%;
-}
+
 .features-list-item {
-  height: 280px;
   background-color: var(--secondary-title-color);
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
   text-align: center;
   &:not(last-child) {
     margin-bottom: 15px;
   }
-  &:hover {
-    background-color: var(--accent-color);
-  }
-  &:hover .features-icon {
-    fill: var(--secondary-title-color);
-  }
-  &:hover .features-icon {
-    fill: var(--secondary-title-color);
-  }
-  &:hover .features-space {
-    color: var(--secondary-title-color);
-  }
-  &:hover .features-subject {
-    color: var(--secondary-title-color);
-  }
-  &:hover .features-subtitle {
-    color: var(--secondary-title-color);
-  }
 }
 .features-link {
-  height: 98px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
+  height: 280px;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
+  &:hover .features-icon,
+  &:focus .features-icon {
+    fill: var(--secondary-title-color);
+  }
+  &:hover .features-icon,
+  &:focus .features-icon {
+    fill: var(--secondary-title-color);
+  }
+  &:hover .features-space,
+  &:focus .features-space {
+    color: var(--secondary-title-color);
+  }
+  &:hover .features-subject,
+  &:focus .features-subject {
+    color: var(--secondary-title-color);
+  }
+  &:hover .features-subtitle,
+  &:focus .features-subtitle {
+    color: var(--secondary-title-color);
+  }
 }
 
 .features-icon {
+  margin-top: 30px;
+  margin-bottom: 20px;
   fill: var(--accent-color);
 }
 
