--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,3 +1,4 @@
+<section class="problems-section">
 <div class="container problems">
     <h1 class="problems-title">Главные проблемы учеников<br>на English ВНО, которые<br> мы <span class="problems-word">помогаем</span>  решить</h1>
     <ul class="problems-list list">
@@ -23,3 +24,4 @@
         </li>
     </ul>
 </div>
+</section>
