--- a/src/sass/components/problems.scss
+++ b/src/sass/components/problems.scss
@@ -1,7 +1,10 @@
-.problems {
-  position: relative;
+.problems-section {
   background-color: #111518;
   padding-top: 50px;
+}
+.problems {
+  position: relative;
+
   height: 547px;
 }
 .problems-title {
@@ -42,11 +45,14 @@
   letter-spacing: 0.08em;
   color: #111518;
   margin: 0;
-  padding-top: 5px;
-  padding-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 @media screen and (min-width: 768px) {
+  .problems {
+    height: 340px;
+  }
   .problems-title {
     @include font(800, 26px, 1.3);
   }
@@ -56,6 +62,7 @@
     justify-content: space-between;
     align-items: center;
     padding-top: 30px;
+    padding-bottom: 24px;
 
     padding-left: 96px;
     padding-right: 109px;
@@ -65,8 +72,13 @@
   .problems-item {
     width: calc(100% / 2);
   }
+  .problems-item:first-child {
+    margin-bottom: 24px;
+  }
 
   .problems-description {
     margin-bottom: 0;
   }
+}
+@media screen and (min-width: 768px) {
 }
