--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,44 @@
 <header class="page-header">
-    <div class="container">HEADER</h1></div>
+  <div class="container">
+    <nav class="header-nav">
+      <a href="#" class="logo">
+        Hell
+        <svg class="logo-img" width="15" height="20">
+          <use href="./images/sprite.svg#icon-fire"></use>
+        </svg>
+        EN<br />
+        <span class="logo-description">адский английский</span>
+      </a>
+      <div class="header-menu-container">
+        <ul class="header-nav-list">
+          <li class="header-nav-list-item">
+            <a href="#" class="header-nav-link">Программа обучения</a>
+          </li>
+          <li class="header-nav-list-item">
+            <a href="#" class="header-nav-link">О нас</a>
+          </li>
+          <li class="header-nav-list-item">
+            <a href="#" class="header-nav-link">Варианты обучения</a>
+          </li>
+          <li class="header-nav-list-item">
+            <a href="#" class="header-nav-link">Контакты</a>
+          </li>
+        </ul>
+        <a href="#" class="header-cosult-link">КОНСУЛЬТАЦИЯ ПО ТЕЛЕФОНУ</a>
+      </div>
+      <button type="button" class="menu-button" data-menu-button>
+        <svg
+          width="20px"
+          height="20px"
+          aria-label="Переключатель мобильного меню"
+        >
+          <use class="icon-menu" href="./images/sprite.svg#icon-burger"></use>
+          <use
+            class="icon-cross"
+            href="./images/sprite.svg#icon-burger-close"
+          ></use>
+        </svg>
+      </button>
+    </nav>
+  </div>
 </header>
