--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -50,7 +50,7 @@
   font-size: 14px;
   line-height: 1.43;
   letter-spacing: 0.08em;
-  color: var(--primary-title-color);
+  color: var(--primary-color-text);
 }
 
 .features-space {
