--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -17,7 +17,7 @@
 
 .how-we-do-it-item {
   width: 280px;
-  height: 280px;
+
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
   padding: 30px 5px 30px 5px;
 
@@ -109,11 +109,11 @@
 
 @media screen and (min-width: 1314px) {
   .how-we-do-it-item {
-    min-width: 424px;
-    height: 396px;
     margin-right: 20px;
     margin-bottom: 20px;
-    padding: 40px 30px 55px 30px;
+    width: 425px;
+
+    padding: 40px 30px 50px 30px;
   }
 
   .how-we-do-it-title {
@@ -132,7 +132,6 @@
   .how-we-do-it-list-text {
     font-size: 18px;
     line-height: 28px;
-
     letter-spacing: 0.08em;
   }
 
