частина стилей для моб

--- a/src/sass/layout/_section.scss
+++ b/src/sass/layout/_section.scss
@@ -1,6 +1,7 @@
-.section{
-    margin: 0 auto;
+.section {
+  margin: 0 auto;
 
-    display: block;
-    align-items: center;
-    text-align: center;}
+  display: block;
+  align-items: center;
+  text-align: center;
+}
