--- a/src/partials/page-how-do.html
+++ b/src/partials/page-how-do.html
@@ -2,58 +2,79 @@
 <section class="how-do">
     <div class="container">
         <h2 class="how-do-title">Как мы это делаем</h2>
-        <ul class="how-do--list list">
+        <ul class="how-do-list list">
             <li class="how-do-list-item">
-                <svg width="45" height="48">
-                    <use href="../sprite.svg#Document"></use>
-                </svg>
-
-                <h3>Адаптированная программа подготовки к ВНО</h3>
-                <p>Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.</p>
+                <div class="how-do-card">
+                    <svg class="how-do-icon" width="45" height="48">
+                        <use href="./images/sprite.svg#Document"></use>
+                    </svg>
+                    
+                    <h3 class="skills-title">Адаптированная программа подготовки к ВНО</h3>
+                    
+                    <p class="skills-text">Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.</p>
+                </div>
+               
             </li>
             <li class="how-do-list-item">
-                <svg width="45" height="48">
-                    <use href="../sprite.svg#Cap"></use>
-                </svg>
-                <h3>Аудитория и онлайн-обучение</h3>
-                <p>Учитель поможет не только в аудитории, но и во время домашней подготовки. Родители могут участвовать
-                    в чате
-                    при желании.</p>
+                <div class="how-do-card">
+                    <svg class="how-do-icon" width="45" height="48">
+                        <use href="./images/sprite.svg#Cap"></use>
+                    </svg>
+                    <h3 class="skills-title">Аудитория и онлайн-обучение</h3>
+                
+                    <p class="skills-text">Учитель поможет не только в аудитории, но и во время домашней подготовки. Родители могут участвовать
+                        в чате
+                        при желании.</p>
+                </div>
+               
             </li>
             <li class="how-do-list-item">
+                <div class="how-do-card">
                 <svg width="45" height="48">
-                    <use href="../sprite.svg#Book"></use>
+                    <use href="./images/sprite.svg#Book"></use>
                 </svg>
-                <h3>Привычка читать на английском языке</h3>
-                <p>Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон
+                <h3 class="skills-title">Привычка читать на английском языке</h3>
+                
+                <p class="skills-text">Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон
                     дважды в
                     неделю.</p>
+                </div>
+                
             </li>
             <li class="how-do-list-item">
-                <svg width="45" height="48">
-                    <use href="../sprite.svg#Hand"></use>
+                <div class="how-do-card">
+                <svg class="how-do-icon" width="45" height="48">
+                    <use href="./images/sprite.svg#Hand"></use>
                 </svg>
-                <h3>Психологическая поддержка</h3>
-                <p>Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности
+                <h3 class="skills-title">Психологическая поддержка</h3>
+                <p class="skills-text">Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности
                     в себе.</p>
+                </div>
+               
             </li>
             <li class="how-do-list-item">
-                <svg width="45" height="48">
-                    <use href="../sprite.svg#Person"></use>
+                <div class="how-do-card">
+                <svg class="how-do-icon" width="45" height="48">
+                    <use href="./images/sprite.svg#Person"></use>
                 </svg>
-                <h3>Обучение по авторским пособиям</h3>
-                <p>Тебе не нужно тратить время
+                <h3 class="skills-title">Обучение по авторским пособиям</h3>
+                <p class="skills-text">Тебе не нужно тратить время
                     на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили
                     2 пособия для тебя.</p>
+                </div>
+                
             </li>
             <li class="how-do-list-item">
-                <svg width="45" height="48">
-                    <use href="../sprite.svg#Music"></use>
-                </svg>
-                <h3>Умение воспринимать устную английскуб речь</h3>
-                <p>“F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать
-                    и разбирать аудиозаписи
-                    в соответствии с изучаемой лексикой.</p>
+                <div class="how-do-card">
+                    <svg class="how-do-icon" width="45" height="48">
+                        <use href="./images/sprite.svg#Music"></use>
+                    </svg>
+                    <h3 class="skills-title">Умение воспринимать устную английскуб речь</h3>
+                    <p class="skills-text">“F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать
+                        и разбирать аудиозаписи
+                        в соответствии с изучаемой лексикой.</p>
+                </div>
+               
             </li>
         </ul>
     </div>
