применяет стили к заголовку

--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -1,3 +1,48 @@
 .problems {
-  background-color: tomato;
+  padding: 50px 0 367px;
+  background-color: $dark-font;
+}
+
+.problems-wrapper {
+  border: 1px solid tomato;
+
+  & .problems-title {
+    font-family: $font;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 136%;
+    letter-spacing: 0.03em;
+    color: $white-font;
+
+    & .accent-title {
+      color: $orange;
+    }
+  }
+}
+
+.features-overlay {
+  width: 280px;
+  padding: 20px 30px;
+  background-color: $font;
+
+  & .features-item {
+    margin-bottom: 20px;
+  }
+  & .features-number {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.643;
+    letter-spacing: 0.08em;
+    color: $orange;
+  }
+  & .features-text {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.43;
+    letter-spacing: 0.08em;
+    color: $dark-font;
+  }
 }
