--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -112,7 +112,7 @@
     margin-right: 20px;
     margin-bottom: 20px;
     width: 425px;
-
+    min-height: 396px;
     padding: 40px 30px 50px 30px;
   }
 
@@ -133,6 +133,10 @@
     font-size: 18px;
     line-height: 28px;
     letter-spacing: 0.08em;
+  }
+
+  .how-we-do-it-list-title::after {
+    margin: 15px auto 15px;
   }
 
   .how-we-do-it-item:nth-child(3n + 3) {
