--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -68,7 +68,7 @@
                 <h3 class="how-we-do-it-list-title">Обучение по авторским <br>пособиям</h3>
                 <p class="how-we-do-it-list-text">
                     Тебе не нужно тратить время
-                    на самостоятельный поиск материала <br>и ничего покупать дополнительно. Мы составили
+                    на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили
                     2 пособия для тебя.
                 </p>
             </li>
@@ -79,7 +79,7 @@
                         <use href="./images/icon/sprite.svg#noun-audio-book">
                     </svg>
                 </div>
-                <h3 class="how-we-do-it-list-title">Умение воспринимать устную <br>английскую речь</h3>
+                <h3 class="how-we-do-it-list-title">Умение воспринимать устную английскую речь</h3>
                 <p class="how-we-do-it-list-text">
                     “F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать
                     и разбирать аудиозаписи
