--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -111,13 +111,12 @@
   .how-we-do-it-item {
     margin-right: 20px;
     margin-bottom: 20px;
-    width: 425px;
+    min-width: 424px;
     min-height: 396px;
     padding: 40px 30px 50px 30px;
   }
 
   .how-we-do-it-title {
-    margin-bottom: 30px;
     font-family: $font;
     text-align: left;
     margin-bottom: 50px;
