Коментит футер и how

--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -1,44 +1,44 @@
-.how-we-do-it-title {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  font-family: $font;
-  text-align: center;
-}
+// .how-we-do-it-title {
+//   margin-top: 50px;
+//   margin-bottom: 30px;
+//   font-family: $font;
+//   text-align: center;
+// }
 
-.how-we-do-it-item {
-  width: 280px;
-  height: 280px;
-  box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
-  padding: 30px 25px 25px 25px;
-}
+// .how-we-do-it-item {
+//   width: 280px;
+//   height: 280px;
+//   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+//   padding: 30px 25px 25px 25px;
+// }
 
-.how-we-do-it-item:hover,
-.how-we-do-it-item:focus {
-  background-color: $orange;
-  color: $white-font;
-}
+// .how-we-do-it-item:hover,
+// .how-we-do-it-item:focus {
+//   background-color: $orange;
+//   color: $white-font;
+// }
 
-.how-we-do-it-item:hover .how-we-do-it-list-text,
-.how-we-do-it-item:focus .how-we-do-it-list-text {
-  color: $white-font;
-}
+// .how-we-do-it-item:hover .how-we-do-it-list-text,
+// .how-we-do-it-item:focus .how-we-do-it-list-text {
+//   color: $white-font;
+// }
 
-.how-we-do-it-list-title {
-  font-family: $font;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 20px;
-  text-align: center;
-  letter-spacing: 0.08em;
-  margin-bottom: 35px;
-}
+// .how-we-do-it-list-title {
+//   font-family: $font;
+//   font-weight: bold;
+//   font-size: 14px;
+//   line-height: 20px;
+//   text-align: center;
+//   letter-spacing: 0.08em;
+//   margin-bottom: 35px;
+// }
 
-.how-we-do-it-list-text {
-  font-family: $font;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 20px;
-  color: $light-font;
-  text-align: center;
-  letter-spacing: 0.08em;
-}
+// .how-we-do-it-list-text {
+//   font-family: $font;
+//   font-weight: 500;
+//   font-size: 12px;
+//   line-height: 20px;
+//   color: $light-font;
+//   text-align: center;
+//   letter-spacing: 0.08em;
+// }
