Вносит правки в названия паршалов

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 @import './base/common';
 @import './base/container';
 
-@import './components/tittle';
+@import './components/title';
 @import './components/button';
 @import './components/section';
 @import './components/backdrop-modal';
@@ -14,11 +14,11 @@
 
 @import './layout/header';
 @import './layout/hero';
-@import './layout/advanteges';
+@import './layout/advantages';
 @import './layout/approach';
-@import './layout/porgram';
+@import './layout/program';
 @import './layout/teacher';
-@import './layout/garantee';
+@import './layout/guarantee';
 @import './layout/reviews';
 @import './layout/reg-form';
 @import './layout/footer';
