--- a/src/partials/our-programm.html
+++ b/src/partials/our-programm.html
@@ -1,65 +1,57 @@
-<section class="programm">
-    <div>
-        <H2>Наша программа</H2>
+<section >
+    <div class="our-programm">
+        <H2 class="our-programm__h2">Наша программа</H2>
         <ul>
-            <li>1 семестр</li>
-            <li>— Grammar</li>
-            <li>Nouns & Articles Adjectives & Adverb</li>
-            <li>— Vocabulary</li>
-            <li>Family & Relations People & Society</li>
+            <li class="our-programm__h3">1 семестр</li>
+            <li class="our-programm__h4">— Grammar</li>
+            <li class="our-programm__text">Nouns & Articles Adjectives & Adverb</li>
+            <li class="our-programm__h4">— Vocabulary</li>
+            <li class="our-programm__text">Family & Relations People & Society</li>
 
-            <li>2 семестр</li>
-            <li>— Grammar</li>
-            <li>Pronouns Active Voice Passive Voice</li>
-            <li>— Vocabulary</li>
-            <li>Home School Work</li>
+            <li class="our-programm__h3">2 семестр</li>
+            <li class="our-programm__h4">— Grammar</li>
+            <li class="our-programm__text">Pronouns Active Voice Passive Voice</li>
+            <li class="our-programm__h4">— Vocabulary</li>
+            <li class="our-programm__text">Home School Work</li>
 
-            <li>3 семестр</li>
-            <li>— Grammar</li>
-            <li> Modal verbs Infinitive Gerund Participle: 1, 2</li>
-            <li>— Vocabulary</li>
-            <li>Travel & Tourism Culture & Free Time Sport</li>
-            <li>— Writing</li>
-            <li>Informal Letter</li>
+            <li class="our-programm__h3">3 семестр</li>
+            <li class="our-programm__h4">— Grammar</li>
+            <li class="our-programm__text"> Modal verbs Infinitive Gerund Participle: 1, 2</li>
+            <li class="our-programm__h4">— Vocabulary</li>
+            <li class="our-programm__text">Travel & Tourism Culture & Free Time Sport</li>
+            <li class="our-programm__h4">— Writing</li>
+            <li class="our-programm__text">Informal Letter</li>
 
-            <li>4 семестр</li>
-            <li>— Grammar</li>
-            <li> Clauses: Conditional and Wishes Direct / Reported speech Preposition Conjunction Numeral</li>
-            <li>— Vocabulary</li>
-            <li>Healthy Living Nature & Environment Money</li>
-            <li>— Writing</li>
-            <li>Formal Letter</li>
+            <li class="our-programm__h3">4 семестр</li>
+            <li class="our-programm__h4">— Grammar</li>
+            <li class="our-programm__text"> Clauses: Conditional and Wishes Direct / Reported speech Preposition Conjunction Numeral</li>
+            <li class="our-programm__h4">— Vocabulary</li>
+            <li class="our-programm__text">Healthy Living Nature & Environment Money</li>
+            <li class="our-programm__h4">— Writing</li>
+            <li class="our-programm__text">Formal Letter</li>
 
-            <li>5 семестр</li>
-            <li>—</li>
-            <li>Revision Tests</li>
+            <li class="our-programm__h3">5 семестр</li>
+            <li class="our-programm__h4">—</li>
+            <li class="our-programm__text">Revision Tests</li>
       
         </ul>
     </div>
-    <div>
-        <H2>Почему нас выбирают</H2>
+    <div class="why-we">
+        <H2 class="why-we__h2">Почему нас выбирают</H2>
         <ul>
-            <li>
-                <p>Обучение в малых командах</p>
-            </li>
-            <li>
-                <p>Визуализированные конспекты</p>
-            </li>
-            <li>
-                <p>Каждое занятие имеет цель и конкретный результ</p>
-            </li>
-            <li>
-                <p>Ревльные результаты преподавателя</p>
-            </li>
-            <li>
-                <p>Прогамма курса соответствует требованиям МОН Украин</p>
-            </li>
-            <li>
-                <p>Набор команд по уровням знаний</p>
-            </li>
-            
-        
-        </ul>
+            <li class="why-we__h3">— 01</li>
+            <li class="why-we__p">Обучение в малых командах</li>
+            <li class="why-we__h3">— 02</li>
+            <li class="why-we__p">Визуализированные конспекты</li>
+            <li class="why-we__h3">— 03</li>
+            <li class="why-we__p">Каждое занятие имеет цель и конкретный результ</li>
+            <li class="why-we__h3">— 04</li>
+            <li class="why-we__p">Ревльные результаты преподавателя</li>
+            <li class="why-we__h3">— 05</li>
+            <li class="why-we__p">Прогамма курса соответствует требованиям МОН Украин</li>
+            <li class="why-we__h3"> — 06</li>
+            <li class="why-we__p">Набор команд по уровням знаний</li>
+         </ul>
 
     </div>
 
