Добавляет исправления в секцию

--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -1,18 +1,23 @@
 .problems.section {
+  position: relative;
   padding-top: 50px;
   padding-bottom: 50px;
   background-color: var(--additional-bg-color);
   height: 545px;
+  margin-bottom: 198px;
 
   @media screen and (min-width: 768px) {
     padding-top: 60px;
     height: 340px;
+    margin-bottom: 202px;
   }
 
   @media screen and (min-width: 1400px) {
     padding-top: 100px;
     padding-bottom: 130px;
     height: 560px;
+    margin-bottom: 280px;
+
     background-image: url('../images/problems/fire-problems.png');
 
     @media screen and (min-device-pixel-ratio: 2),
@@ -22,6 +27,7 @@
     }
     background-repeat: no-repeat;
     background-position: right bottom;
+    background-size: 406px 472px;
   }
 }
 
@@ -50,9 +56,8 @@
 }
 
 .problems-list__wrapper {
-  //   position: absolute;
-  //   top: 205px;
-  //   width: 280px;
+  position: absolute;
+  width: 280px;
 
   padding: 20px 30px;
   background-color: #ffffff;
@@ -60,10 +65,12 @@
 
   @media screen and (min-width: 768px) {
     padding: 30px 96px;
+    width: 688px;
   }
 
   @media screen and (min-width: 1400px) {
     padding: 70px 114px;
+    width: 1314px;
   }
 }
 
@@ -105,7 +112,7 @@
   margin-bottom: 5px;
 
   &::before {
-    // @include pseudo(2px, 20px, var(--accent-color), 9px);
+    // @include pseudo(2px, 20px, var(--accent-color));
     content: '';
     display: block;
     height: 2px;
