added partials and variable mixin

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,36 +1,25 @@
-$media-mob: 480px;
+$media-mob: 320px;
+$media-mob-middle: 576px;
 $media-tab: 768px;
-$media-desctop: 1200px;
+$media-desctop: 1280px;
 
-$active-color: #2196f3;
+// Colors
+$active-color: #c7133e;
+$active-color-bg: #ecebeb;
+
 $color-white: #ffffff;
 $color-black: #000000;
-$color-secondary-grey: rgba(255, 255, 255, 0.6);
-$color-secondary-footer-dark-gray: rgba(255, 255, 255, 0.1);
-$color-button: rgba(0, 0, 0, 0.15);
-$color-border-close: rgba(0, 0, 0, 0.1);
 
-$primary-text-color: #757575;
-$secondary-text-color: #212121;
+$color-red: #d41443;
+$color-pink-dark: #ffb8ca;
+$color-pink: #ffa5ba;
+$color-pink-light: #fff5f6;
 
-$primary-background-color: #ffffff;
-$secondary-background-color: #f5f4fa;
-$sub-background-color: #c4c4c4;
+$color-orange: #f0d1a5;
+$color-green: #c2e297;
 
-$background-footer: #2f303a;
-$border-color: #eeeeee;
-$color-icon-gray: #afb1b8;
+$color-gray: #907e82;
 
-$background-description: rgba(47, 48, 58, 0.8);
-$background-blue-description: rgba(33, 150, 243, 0.9);
-
-$backdrop: rgba(0, 0, 0, 0.2);
-
+// Hover effects
 $transform-function: cubic-bezier(0.4, 0, 0.2, 1);
 $time-var: 250ms;
-
-$modal-border-color: rgba(33, 33, 33, 0.2);
-$modal-placeholder: rgba(117, 117, 117, 0.5);
-
-$form-email: rgba(255, 255, 255, 0.6);
-$form-input-border-color: rgba(255, 255, 255, 0.3);
