--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -13,36 +13,34 @@
 
         </div>
 
-        <div class=“problems-features-overlay”>
-            <ul class=“problems-features-list”>
-                <li class=“problems-features-item”>
-                    <span class=“problems-features-number”>— 01</span>
-                    <p class=“problems-features-text”>Название грамматики</p>
+        <div class=“features-overlay”>
+            <ul class=“features-list”>
+                <li class=“features-item”>
+                    <span class=“features-number”>— 01</span>
+                    <p class=“features-text”>Название грамматики</p>
                 </li>
-                <li class=“problems-features-item”>
-                    <span class=“problems-features-number”>— 02</span>
-                    <p class=“problems-features-text”>Неумение воcпринимать устную английскую речь</p>
+                <li class=“features-item”>
+                    <span class=“features-number”>— 02</span>
+                    <p class=“features-text”>Неумение воcпринимать устную английскую речь</p>
                 </li>
-                <li class=“problems-features-item”>
-                    <span class=“problems-features-number”>— 03</span>
-                    <p class=“problems-features-text”>Скупой словарный запас для написания сочинения</p>
+                <li class=“features-item”>
+                    <span class=“features-number”>— 03</span>
+                    <p class=“features-text”>Скупой словарный запас для написания сочинения</p>
                 </li>
-                <li class=“problems-features-item”>
-                    <span class=“problems-features-number”>— 04</span>
-                    <p class=“problems-features-text”>Подготовка в одиночку</p>
+                <li class=“features-item”>
+                    <span class=“features-number”>— 04</span>
+                    <p class=“features-text”>Подготовка в одиночку</p>
                 </li>
-                <li class=“problems-features-item”>
-                    <span class=“problems-features-number”>— 05</span>
-                    <p class=“problems-features-text”>Отсутствие единого ресурса знаний</p>
+                <li class=“features-item”>
+                    <span class=“features-number”>— 05</span>
+                    <p class=“features-text”>Отсутствие единого ресурса знаний</p>
                 </li>
-                <li class=“problems-features-item”>
-                    <span class=“problems-features-number”>— 06</span>
-                    <p class=“problems-features-text”>Недостаточной самоорганизации и лень</p>
+                <li class=“features-item”>
+                    <span class=“features-number”>— 06</span>
+                    <p class=“features-text”>Недостаточной самоорганизации и лень</p>
                 </li>
             </ul>
         </div>
-        <div> [jhjij</div>
-   </div>
 
 
-</section>
+    </div>
