--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -1,7 +1,7 @@
 .choose {
   position: absolute;
   top: 1643px;
-
+  left: 20px;
   height: 638px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -59,16 +59,19 @@
 
   .choose {
     top: 1213px;
+    left: 0;
     height: 394px;
     padding: 0;
-    padding-left: 98px;
-    padding-right: 118px;
+    margin-left: 40px;
+    margin-right: 40px;
   }
 
   .choose-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding-left: 98px;
+    padding-right: 118px;
   }
 
   .choose-list-item {
@@ -83,6 +86,7 @@
 @media screen and (min-width: 1344px) {
   .choose {
     top: 1038px;
+    left: 0;
     height: 394px;
     padding: 0;
     padding-top: 70px;
@@ -95,23 +99,20 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding: 0;
   }
 
   .choose-list-item {
     padding-bottom: 0;
     padding-top: 0px;
     width: 356px;
+
+    &:nth-child(n + 4) {
+      padding-top: 32px;
+    }
   }
 
   .choose-title {
     display: none;
-  }
-
-  .choose-list-subtitle {
-    padding-top: 32px;
-
-    &:nth-child(n + 3) {
-      padding-top: 0;
-    }
   }
 }
