--- a/src/partials/choose.html
+++ b/src/partials/choose.html
@@ -1,36 +1,34 @@
 <section class="choose">
-    <div class="container">
-        <h2 class="choose-title">Почему нас выбирают</h2>
-        <ol class="choose-list">
-            <li class="choose-list-item">
-                <h3 class="choose-list-subtitle">— 01</h3>
-                Обучение в малых <span>командах</span>
-            </li>
-        
-            <li class="choose-list-item">
-                <h3 class="choose-list-subtitle">— 02</h3>
-                Визуализированные <span>конспекты</span>
-            </li>
-        
-            <li class="choose-list-item">
-                <h3 class="choose-list-subtitle">— 03</h3>
-                Каждое занятие имеет <span>цель и конкретный</span> результат
-            </li>
-        
-            <li class="choose-list-item">
-                <h3 class="choose-list-subtitle">— 04</h3>
-                Реальные результаты преподавателя
-            </li>
-        
-            <li class="choose-list-item">
-                <h3 class="choose-list-subtitle">— 05</h3>
-                Программа курса соответствует <span>требованиям МОН</span> Украины
-            </li>
-        
-            <li class="choose-list-item">
-                <h3 class="choose-list-subtitle">— 06</h3>
-                Набор команд по <span>уровням знаний</span>
-            </li>
-        </ol>
-    </div>
+    <h2 class="choose-title">Почему нас выбирают</h2>
+    <ol class="choose-list">
+        <li class="choose-list-item">
+            <h3 class="choose-list-subtitle">— 01</h3>
+            <p>Обучение в малых <span>командах</span></p>
+        </li>
+    
+        <li class="choose-list-item">
+            <h3 class="choose-list-subtitle">— 02</h3>
+            <p>Визуализированные <span>конспекты</span></p>
+        </li>
+    
+        <li class="choose-list-item">
+            <h3 class="choose-list-subtitle">— 03</h3>
+            <p>Каждое занятие имеет <span>цель и конкретный</span> результат</p>
+        </li>
+    
+        <li class="choose-list-item">
+            <h3 class="choose-list-subtitle">— 04</h3>
+            <p>Реальные результаты преподавателя</p>
+        </li>
+    
+        <li class="choose-list-item">
+            <h3 class="choose-list-subtitle">— 05</h3>
+            <p>Программа курса соответствует <span>требованиям МОН</span> Украины</p>
+        </li>
+    
+        <li class="choose-list-item">
+            <h3 class="choose-list-subtitle">— 06</h3>
+            <p>Набор команд по <span>уровням знаний</span></p>
+        </li>
+    </ol>
 </section>
