Формирование колонок списка

--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -6,6 +6,10 @@
     padding-top: 60px;
     height: 340px;
     }
+    @media screen and (min-width:1344px) {
+    padding-top: 100px;
+    height: 560px;    
+    }
 }
 .problems-content {
     max-width: 280px;
@@ -17,6 +21,10 @@
     max-width: 688px; 
     height: 303px;    
     }
+    @media screen and (min-width:1344px){
+    max-width: 1314px;
+    height: 362px;
+    }
 }
 .problems-title {
     font-weight: 800;
@@ -27,6 +35,9 @@
     @media screen and (min-width:768px) {
     font-size: 26px;        
     }
+    @media screen and (min-width:1344px) {
+    font-size: 46px;
+    }
 }
 .problems-title-word{
     font-weight: 800;
@@ -35,8 +46,11 @@
     letter-spacing: 0.03em;
     color: var(--accent-color);
     @media screen and (min-width:768px) {
-    font-size: 26px;      
-        }
+    font-size: 26px;
+   }
+    @media screen and (min-width:1344px) {
+    font-size: 46px;
+    }
 }
 .problems-item-title {    
     font-weight: 700;
@@ -45,7 +59,12 @@
     letter-spacing: 0.08em;
     color: var(--accent-color);
     &:not(:last-child) {
-    margin-bottom: 5px;}    
+    margin-bottom: 5px;}
+    @media screen and (min-width:1344px) {
+    font-size: 20px;
+    &:not(:last-child) {
+        margin-bottom: 10px;}
+    }    
 }
 .problems-item-text {
     font-weight: 700;
@@ -55,6 +74,18 @@
     color: var(--title-text-color);    
 }
 .problems-item {
-    &:not(:last-child) {
+    @media screen and (min-width:319px) and (max-width:767px){
+    &:not(:last-child) {        
         margin-bottom: 10px;}
+}}
+.problems-list {
+    @media screen and (min-width:768px) {
+        flex-wrap: wrap;
+        display: flex;}
 }
+.problems-item {
+    @media screen and (min-width:768px) {
+    flex: 1 0 50%}
+    @media screen and (min-width:1344px){
+        flex: 1 0 33%
+    }}
