--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,5 +5,6 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './utils/variables';
+@import './utils/mixins';
+@import './utils/placeholders';
 @import './components/base';
-@import './components/example';
