--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -121,6 +121,10 @@
     font-family: $font;
     text-align: left;
     margin-bottom: 50px;
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 130%;
+    letter-spacing: 0.03em;
   }
 
   .how-we-do-it-list-title {
