--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -2,7 +2,7 @@
     <div class="modal">
         <button type="button" class="close-btn" data-modal-close>
             <svg class="close-btn-icon" width="18px" height="18px"> 
-                <use href="./images/sprite1.svg/#close-btn"></use>
+                <use href="./images/sprite.svg/#close-btn"></use>
             </svg>
         </button>
         <p class="modal-form-name">Оставьте свои данные, мы вам перезвоним</p>
@@ -11,7 +11,7 @@
                 <span class="modal-form-input-wrapper">
                     <input type="text" name="user-name" class="modal-form-input">
                     <svg class="modal-form-icon" width="18" height="18">
-                        <use href="./images/sprite1.svg#person"></use>
+                        <use href="./images/sprite.svg#person"></use>
                     </svg>
                 </span>
             </label>
@@ -19,7 +19,7 @@
                 <span class="modal-form-input-wrapper">
                     <input type="tel" name="user-tel" class="modal-form-input">
                     <svg class="modal-form-icon" width="18" height="18">
-                        <use href="./images/sprite1.svg#tel"></use>
+                        <use href="./images/sprite.svg#tel"></use>
                     </svg>
                 </span>
             </label>
@@ -27,7 +27,7 @@
                 <span class="modal-form-input-wrapper">
                     <input type="email" name="user-emale" class="modal-form-input">
                     <svg class="modal-form-icon" width="18" height="18">
-                        <use href="./images/sprite1.svg#email"></use>
+                        <use href="./images/sprite.svg#email"></use>
                     </svg>
                 </span>
             </label>
