--- a/src/sass/components/_backdrop.scss
+++ b/src/sass/components/_backdrop.scss
@@ -181,7 +181,7 @@
     
     letter-spacing: 0.03em;
     
-    color: #757575;    
+    color: var(--grey-color);    
 
     &::before{
         margin-right: 8.38px;
@@ -214,7 +214,7 @@
 
     .modal{
         width: 450px;
-        min-height: 609px;
+        min-height: 563px;
         padding: 40px;
     }
 
@@ -231,7 +231,7 @@
 
     .modal{
         width: 528px;
-        min-height: 581px;
+        min-height: 549px;
     }
 
     .modal-form-name{
