Adds styles for page-header (tablet).

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -9,8 +9,11 @@
                 </svg>
                 <span class="logo-text">EN</span>
             </div>
-            <span class="logo-description">Адский Английский</span>
+            <span class="logo-description">
+                <span class="logo-accent">Адский</span>Английский
+            </span>
         </a>
+        <button type="button" class="nav-btn header-btn">Консультация по телефону</button>
         <button type="button" class="menu-btn" aria-expanded="false" aria-controls="menu" data-menu-button>
             <svg class="menu-btn-icon" width="20px" height="12px" aria-label="Перекючатель мобильного меню">
                 <use class="menu-icon" href="./images/sprite.svg#menu"></use>
@@ -28,7 +31,9 @@
                     </svg>
                     <span class="logo-text dark-theme">EN</span>
                 </div>
-                <span class="logo-description dark-theme"">Адский Английский</span>
+                <span class="logo-description dark-theme">
+                    <span class="logo-accent">Адский</span>Английский
+                </span>
             </a>
             <ul class="nav-list list">
                 <li class="nav-item">
