--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -29,7 +29,6 @@
   display: block;
   font-weight: 800;
   font-size: 16px;
-  // font-size: 26px;
   line-height: 1.23;
   letter-spacing: 0.04em;
 
@@ -48,9 +47,6 @@
   font-size: 6px;
   line-height: 1.25;
   letter-spacing: 0.06em;
-  // font-size: 8px;
-  // line-height: 1.25;
-  // letter-spacing: 0.18em;
   text-transform: uppercase;
 
   color: var(--title-text-color);
@@ -63,8 +59,6 @@
 .logo-icon {
   width: 14px;
   height: 19px;
-  // width: 22px;
-  // height: 30px;
   margin-left: 4px;
   margin-right: 4px;
   margin-bottom: 4px;
@@ -76,7 +70,7 @@
   height: 12px;
   margin: 0;
   padding: 0;
-  padding-top: 8px;
+  padding-top: 10px;
   border: none;
   z-index: 100;
   background-color: transparent;
@@ -114,13 +108,13 @@
 }
 
 .nav-list {
+  display: block;
   margin-top: 50px;
   margin-bottom: 50px;
 }
 
 .nav-btn {
   display: block;
-  margin: 0 auto;
   padding: 14px 14px;
   border: 2px solid var(--accent-color);
   background-color: transparent;
@@ -132,6 +126,10 @@
   text-transform: uppercase;
 
   color: var(--accent-color);
+
+  &.header-btn {
+    display: none;
+  }
 }
 
 .menu {
@@ -149,5 +147,64 @@
 
   &.is-open {
     display: block;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-btn {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .logo,
+  .logo-dark {
+    padding-top: 40px;
+  }
+
+  .logo-text {
+    font-size: 26px;
+  }
+
+  .logo-description {
+    font-size: 8px;
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+  }
+
+  .logo-accent {
+    padding-right: 6px;
+    color: var(--accent-color);
+  }
+
+  .logo-icon {
+    width: 22px;
+    height: 30px;
+    margin-bottom: 5px;
+  }
+
+  .nav-btn.header-btn {
+    display: block;
+    margin-top: 40px;
+    margin-left: 235px;
+    margin-right: 40px;
+  }
+
+  .nav-btn {
+    display: none;
+  }
+  .menu {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .nav-link {
+    font-size: 26px;
+  }
+
+  .nav-list {
+    display: block;
+    margin: 0 178px;
+    margin-top: 72px;
   }
 }
