--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,8 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+@import './utils/variables';
+@import './base/common';
+@import './utils/visually-hidden';
+@import './utils/placeholders';
+@import './utils/breakpoints';
