--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -32,7 +32,7 @@
 .choose-list-item {
   list-style-type: none; /* Убираем маркеры */
 
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 
   width: 216px;
 
@@ -47,21 +47,19 @@
   letter-spacing: 0.08em;
 
   &:last-child {
-    padding-bottom: 0;
+    margin-bottom: 0px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .choose-list-item {
-    padding-top: 30px;
-  }
-
   .choose {
     top: 1213px;
     left: 0;
     padding: 0;
     margin-left: 40px;
     margin-right: 40px;
+    padding-top: 30px;
+    padding-bottom: 25px;
   }
 
   .choose-list {
@@ -72,12 +70,16 @@
     padding-right: 118px;
   }
 
-  .choose-list-item {
-    padding-bottom: 0;
-  }
-
   .choose-title {
     left: 199px;
+  }
+
+  .choose-list-item {
+    margin-bottom: 30px;
+
+    &:nth-child(n + 5) {
+      margin-bottom: 0px;
+    }
   }
 }
 
@@ -105,7 +107,7 @@
     width: 356px;
 
     &:nth-child(n + 4) {
-      padding-top: 32px;
+      margin-top: 32px;
     }
   }
 
