--- a/src/partials/how.html
+++ b/src/partials/how.html
@@ -23,7 +23,7 @@
 
             <li class="how-we-do-it-item">
                 <div class="hwd-icon">
-                    <svg width="48" height="47">
+                    <svg class="hwd-svg" width="48" height="47">
                         <use href="./images/icon/sprite.svg#noun-mobile-learning">
                     </svg>
                 </div>
@@ -36,7 +36,7 @@
 
             <li class="how-we-do-it-item">
                 <div class="hwd-icon">
-                    <svg width="68" height="48">
+                    <svg class="hwd-svg" width="68" height="48">
                         <use href="./images/icon/sprite.svg#noun-open-book">
                     </svg>
                 </div>
@@ -48,7 +48,7 @@
 
             <li class="how-we-do-it-item">
                 <div class="hwd-icon">
-                    <svg width="48" height="48">
+                    <svg class="hwd-svg" width="48" height="48">
                         <use href="./images/icon/sprite.svg#noun-psihilogic-support">
                     </svg>
                 </div>
@@ -61,7 +61,7 @@
 
             <li class="how-we-do-it-item">
                 <div class="hwd-icon">
-                    <svg width="39" height="48">
+                    <svg class="hwd-svg" width="39" height="48">
                         <use href="./images/icon/sprite.svg#noun-female-student">
                     </svg>
                 </div>
@@ -75,7 +75,7 @@
 
             <li class="how-we-do-it-item">
                 <div class="hwd-icon">
-                    <svg width="57" height="48">
+                    <svg class="hwd-svg" width="57" height="48">
                         <use href="./images/icon/sprite.svg#noun-audio-book">
                     </svg>
                 </div>
