--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -15,6 +15,10 @@
   margin-bottom: 20px;
 }
 
+.hwd-svg {
+  fill: $orange;
+}
+
 .how-we-do-it-item {
   width: 280px;
 
@@ -71,6 +75,11 @@
 
 .how-we-do-it-item:last-child {
   margin-bottom: 0px;
+}
+
+.how-we-do-it-item:hover .hwd-svg,
+.how-we-do-it-item:focus .hwd-svg {
+  fill: $white-font;
 }
 /*--------------------------------------------------------*/
 
