--- a/src/partials/reg-form.html
+++ b/src/partials/reg-form.html
@@ -1,4 +1,4 @@
-<section class="form-section section">
+<section class="form-section">
   <div class="container">
     <h2 class="form-title title">
       Регистрация на
