--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -1,3 +1,22 @@
+@media screen and (min-width: 320px) {
+  .teacher {
+    padding-top: 270px;
+    padding-bottom: 54px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .teacher {
+    padding-top: 302px;
+    padding-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .teacher {
+    padding-top: 329px;
+    padding-bottom: 130px;
+  }
+}
 .subtitle {
   font-family: Montserrat;
   font-style: normal;
@@ -9,26 +28,43 @@
 @media screen and (min-width: 320px) {
   .subtitle {
     font-size: 20px;
-    margin-bottom: 20px;
   }
 }
 @media screen and (min-width: 768px) {
   .subtitle {
     font-size: 26px;
-    margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1344px) {
   .subtitle {
     font-size: 46px;
-    margin-bottom: 50px;
   }
 }
-@media screen and (min-width: 320px) {
+
+/*.teacher-list-container {
+  margin-top: 5px;
+  margin-bottom: 10px;
+}*/
+
+@media screen and (min-width: 768px) {
+  .teacher-container {
+    display: flex;
+  }
+  .teacher-list-container {
+    padding-left: 40px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .teacher-list-container {
+    padding-left: 25px;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .image-teacher {
     margin-bottom: 20px;
   }
 }
+
 .teacher-name {
   display: inline-block;
   font-family: Montserrat;
@@ -48,6 +84,7 @@
     width: 401px;
   }
 }
+
 @media screen and (min-width: 1344px) {
   .teacher-name {
     font-size: 30px;
@@ -57,7 +94,21 @@
     width: 640px;
   }
 }
-
+@media screen and (min-width: 320px) {
+  .teacher-container {
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .teacher-container {
+    margin-top: 30px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .teacher-container {
+    margin-top: 50px;
+  }
+}
 .teacher-list-item {
   font-family: Montserrat;
   font-style: normal;
@@ -66,9 +117,11 @@
   line-height: 1.214;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
+  margin-left: 9px;
 }
 @media screen and (min-width: 320px) {
   .teacher-list-item {
+    margin-top: 20px;
     margin-bottom: 5px;
   }
 }
@@ -77,9 +130,20 @@
     font-size: 16px;
     line-height: 1.25;
     margin-bottom: 15px;
+    margin-left: 34px;
   }
 }
 
+.line-orage {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 164.9%;
+  align-items: center;
+  letter-spacing: 0.08em;
+  color: var(--accent-color);
+}
 .teacher-list-container-text {
   font-family: Montserrat;
   font-style: normal;
@@ -106,6 +170,12 @@
   text-decoration-line: underline;
   color: var(--accent-color);
 }
+@media screen and (min-width: 1344px) {
+  .teacher-link {
+    font-size: 18px;
+    line-height: 1.555;
+  }
+}
 .guarantee-list-item {
   font-family: Montserrat;
   font-style: normal;
@@ -117,33 +187,4 @@
 }
 .color-span {
   color: var(--accent-color);
-}
-.teacher-list-container {
-  margin-top: 5px;
-  margin-bottom: 10px;
-}
-.teacher-list-item {
-  @media screen and (min-width: 320px) {
-    margin-top: 20px;
-    margin-bottom: 5px;
-  }
-}
-@media screen and (min-width: 320px) {
-  .teacher {
-    padding-top: 270px;
-    padding-bottom: 54px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .teacher {
-    padding-top: 302px;
-    padding-bottom: 50px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .teacher {
-    padding-top: 329px;
-    padding-bottom: 130px;
-  }
 }
