--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -2,73 +2,85 @@
 <section class="section teacher">
   <div class="container">
     <h2 class="subtitle">Преподаватель</h2>
-    <picture>
-      <source
-        srcset="
-          ./images/teacher/teacher1200@1x.webp 1x,
-          ./images/teacher/teacher1200@2x.webp 2x
-        "
-        media="(min-width: 1344px)"
-        type="image/webp"
-      />
-      <source
-        srcset="
-          ./images/teacher/teacher1200@1x.jpg 1x,
-          ./images/teacher/teacher1200@2x.jpg 2x
-        "
-        media="(min-width: 1344px)"
-      />
-      <source
-        srcset="
-          ./images/teacher/teacher320@1x.webp 1x,
-          ./images/teacher/teacher320@2x.webp 2x
-        "
-        media="(min-width: 319px)"
-        type="image/webp"
-      />
-      <source
-        srcset="
-          ./images/teacher/teacher320@1x.jpg 1x,
-          ./images/teacher/teacher320@2x.jpg 2x
-        "
-        media="(min-width: 319px)"
-      />
+    <div class="teacher-container">
+      <picture>
+        <source
+          srcset="
+            ./images/teacher/teacher1200@1x.webp 1x,
+            ./images/teacher/teacher1200@2x.webp 2x
+          "
+          media="(min-width: 1344px)"
+          type="image/webp"
+        />
+        <source
+          srcset="
+            ./images/teacher/teacher1200@1x.jpg 1x,
+            ./images/teacher/teacher1200@2x.jpg 2x
+          "
+          media="(min-width: 1344px)"
+        />
+        <source
+          srcset="
+            ./images/teacher/teacher320@1x.webp 1x,
+            ./images/teacher/teacher320@2x.webp 2x
+          "
+          media="(min-width: 319px)"
+          type="image/webp"
+        />
+        <source
+          srcset="
+            ./images/teacher/teacher320@1x.jpg 1x,
+            ./images/teacher/teacher320@2x.jpg 2x
+          "
+          media="(min-width: 319px)"
+        />
 
-      <img
-        class="image-teacher"
-        src="./images/teacher/teacher320@1x.jpg"
-        alt="учительница"
-      />
-    </picture>
-    <div class="teacher-list-container">
-      <h3 class="teacher-name">Елена Морева</h3>
-      <ul class="teacher-list list">
-        <li class="teacher-list-item">
-          Опыт подготовки учеников к ВНО - 6 лет
-        </li>
-        <li class="teacher-list-item">
-          Собственный результат сдачи ВНО - 197 баллов 2 года подряд
-        </li>
-        <li class="teacher-list-item">
-          Сдала на отлично международный аналог ВНО - Кембриджский PET
-          (Preliminary English Test)
-        </li>
-      </ul>
+        <img
+          class="image-teacher"
+          src="./images/teacher/teacher320@1x.jpg"
+          alt="учительница"
+        />
+      </picture>
       <div class="teacher-list-container">
-        <p class="teacher-list-container-text">
-          Высшее образование получила в Институте международных отношений НАУ по
-          специальности переводчик-аналитик. В свободное время проходит курсы от
-          лучших университетов мира по эффективному преподаванию и методикам
-          написания сочинений. В числе пройденных: English Grammar and Essay
-          Writing (Berkeley), English Grammar&Style (The University of
-          Queesland), How to Write an Essay (Berkeley), Academic and Business
-          Writing (Berkeley), The Art of Teaching (GEMS education), Powerful
-          Tools for Teaching and Learning (University of Houston).
-        </p>
+        <h3 class="teacher-name">Елена Морева</h3>
+        <ul class="teacher-list list">
+          <svg class="teacher-vector" width="14px" height="17px">
+            <use href="./images/sprite.svg#Vector"></use>
+          </svg>
+          <li class="teacher-list-item">
+            Опыт подготовки учеников к ВНО - 6 лет
+          </li>
+          <svg class="teacher-vector" width="14px" height="17px">
+            <use href="./images/sprite.svg#Vector"></use>
+          </svg>
+          <li class="teacher-list-item">
+            Собственный результат сдачи ВНО - 197 баллов 2 года подряд
+          </li>
+          <svg class="teacher-vector" width="14px" height="17px">
+            <use href="./images/sprite.svg#Vector"></use>
+          </svg>
+          <li class="teacher-list-item">
+            Сдала на отлично международный аналог ВНО - Кембриджский PET
+            (Preliminary English Test)
+          </li>
+        </ul>
+        <span class="line-orage">—</span>
+        <div class="teacher-list-container">
+          <p class="teacher-list-container-text">
+            Высшее образование получила в Институте международных отношений НАУ
+            по специальности переводчик-аналитик. В свободное время проходит
+            курсы от лучших университетов мира по эффективному преподаванию и
+            методикам написания сочинений. В числе пройденных: English Grammar
+            and Essay Writing (Berkeley), English Grammar&Style (The University
+            of Queesland), How to Write an Essay (Berkeley), Academic and
+            Business Writing (Berkeley), The Art of Teaching (GEMS education),
+            Powerful Tools for Teaching and Learning (University of Houston).
+          </p>
+        </div>
+        <a class="teacher-link" href="#"
+          >Cambrige English Entry Level Certificate</a
+        >
       </div>
-      <a class="teacher-link" href="#"
-        >Cambrige English Entry Level Certificate</a
-      >
     </div>
   </div>
 </section>
