--- a/src/sass/components/_garant.scss
+++ b/src/sass/components/_garant.scss
@@ -1,11 +1,21 @@
 .garant__title {
-  font-family: Montserrat;
   font-style: normal;
   font-weight: 800;
   font-size: 46px;
   line-height: 130%;
   text-align: center;
   letter-spacing: 0.03em;
-
   color: #111518;
+  margin-bottom: 50px;
+  //   outline: 1px solid red;
+}
+
+.garants .feature-list__container {
+  //   outline: 1px solid teal;
+  padding: 50px;
+  background-color: var(--grey-color);
+}
+
+.feature-list__description:not(:last-child) {
+  padding-bottom: 20px;
 }
