--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,5 +2,5 @@
   --black-color: #111518;
   --orange-color: #ff6b09;
   --white-color: #ffffff;
-  --grey-color: #b9b9b9;
+  --grey-color: #f1f1f1;
 }
