--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,24 +23,23 @@
         <li class="nav_list-item"><a class="nav_link" href="#">Контакты</a></li>
       </ul>
     </nav>
-    <a class="header_button" href=""> Консультация по телефону </a>
-    <button type="button" class="nav_menu-btn is-open" data-menu-button>
+    <a class="header_button" href="#"> Консультация по телефону </a>
+    <a type="button" class="nav_menu-btn is-open" data-menu-button>
       <svg height="12" width="20">
         <use class="icon-cross" href="./images/sprite.svg#nav-menu"></use>
-        <use class="icon-menu" href="./images/sprite.svg#close-menu"></use>
+        <use class="icon-menu" href="./images/sprite.svg#menu_closed"></use>
       </svg>
-    </button>
+    </a>
+    <a href="#" class="logo-mobile">
+      <svg height="29" width="80">
+        <use href="./images/sprite.svg#mobile_dark-logo"></use>
+      </svg>
+    </a>
     <div class="menu" data-menu>
-      <a href="#" class="menu_logo">
-        <p class="logo_link">
-          Hell<svg class="menu_logo-svg" height="29" width="21">
-            <use href="./images/sprite.svg#icon-fire"></use>
-          </svg>
-          EN
-        </p>
-        <p class="menu_logo-text">
-          <span class="menu_logo-accent">Адский</span> английский
-        </p>
+      <a href="#" class="logo-mobile menu_dark-logo">
+        <svg height="29" width="80">
+          <use href="./images/sprite.svg#mobile_logo"></use>
+        </svg>
       </a>
       <nav class="menu_nav">
         <ul class="menu_nav-list">
