--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,122 +1,9 @@
-// .header {
-//   display: flex;
-//   justify-content: space-around;
-// }
-// ==============NAV==============
-// .nav_list {
-//   display: flex;
-
-//   .nav_list-item + .nav_list-item {
-//     margin-left: 40px;
-//   }
-//   .nav_list-item .nav_link {
-//     display: inline-block;
-//     padding-top: 61px;
-//     color: var(--secondary-text-color);
-//   }
-//   font-style: normal;
-//   font-weight: 70;
-//   font-size: 14px;
-//   line-height: 1.2;
-//   text-transform: uppercase;
-
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
-// ==============LOGO============
-// .logo {
-//   display: flex;
-//   flex-direction: column;
-// }
-// .logo_link {
-//   display: flex;
-//   align-items: flex-start;
-//   padding-top: 45px;
-
-//   font-style: normal;
-//   font-weight: 800;
-//   font-size: 26px;
-//   line-height: 1.2;
-//   letter-spacing: 0.04em;
-
-//   color: var(--title-text-color);
-
-//   .logo_svg {
-//     margin-left: 4px;
-//     margin-right: 4px;
-//   }
-// }
-// .logo_text {
-//   font-family: Montserrat;
-//   font-style: normal;
-//   font-weight: 700;
-//   font-size: 8px;
-//   line-height: 10px;
-
-//   letter-spacing: 0.18em;
-//   text-transform: uppercase;
-
-//   color: var(--title-text-color);
-//   .logo_accent {
-//     color: var(--accent-color);
-//   }
-// }
-// ================BUTTON==============
-// .header_button {
-//   margin-top: 35px;
-
-//   background-color: transparent;
-//   color: var(--accent-color);
-//   border: 2px var(--accent-color) solid;
-//   padding: 27px 23px 26px 24px;
-// }
-
 @media screen and(min-width: 320px) {
   .header {
     position: relative;
   }
   .logo {
-    position: absolute;
-    top: 33px;
-    left: 20px;
-
-    display: flex;
-    flex-direction: column;
-    z-index: 999999999;
-  }
-  .logo_link {
-    display: flex;
-    align-items: flex-start;
-
-    font-style: normal;
-    font-weight: 800;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.04em;
-
-    color: var(--title-text-color);
-
-    .logo_svg {
-      margin-left: 4px;
-      margin-right: 4px;
-    }
-  }
-  .logo_text {
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 8px;
-    line-height: 10px;
-
-    letter-spacing: 0.18em;
-    text-transform: uppercase;
-
-    color: var(--title-text-color);
-    .logo_accent {
-      color: var(--accent-color);
-    }
+    display: none;
   }
   .nav_list {
     display: none;
@@ -166,5 +53,128 @@
       display: block;
       height: 453px;
     }
+  }
+  .logo-mobile {
+    position: absolute;
+    top: 30px;
+    left: 20px;
+  }
+  .menu_nav {
+    margin-top: 108px;
+    padding-left: 20px;
+
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 136%;
+
+    letter-spacing: 0.03em;
+
+    .menu_nav-list-item {
+      margin-top: 20px;
+    }
+  }
+  .menu_nav-link {
+    color: var(--white-text-color);
+  }
+  .menu_header-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 260px;
+    margin: 50px auto;
+    padding: 14px;
+
+    background-color: transparent;
+    color: var(--accent-color);
+    border: 2px var(--accent-color) solid;
+  }
+}
+@media screen and(min-width: 1344px) {
+  .menu {
+    display: none;
+  }
+  .nav_menu-btn {
+    display: none;
+  }
+  .logo-mobile {
+    display: none;
+  }
+  .header {
+    display: flex;
+    justify-content: space-around;
+  }
+  // ==============NAV==============
+  .nav_list {
+    display: flex;
+
+    .nav_list-item + .nav_list-item {
+      margin-left: 40px;
+    }
+    .nav_list-item .nav_link {
+      display: inline-block;
+      padding-top: 61px;
+      color: var(--secondary-text-color);
+    }
+    font-style: normal;
+    font-weight: 70;
+    font-size: 14px;
+    line-height: 1.2;
+    text-transform: uppercase;
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
+    }
+  }
+  // ==============LOGO============
+  .logo {
+    display: flex;
+    flex-direction: column;
+  }
+  .logo_link {
+    display: flex;
+    align-items: flex-start;
+    padding-top: 45px;
+
+    font-style: normal;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+
+    color: var(--title-text-color);
+
+    .logo_svg {
+      margin-left: 4px;
+      margin-right: 4px;
+    }
+  }
+  .logo_text {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 10px;
+
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+
+    color: var(--title-text-color);
+    .logo_accent {
+      color: var(--accent-color);
+    }
+  }
+  // ================BUTTON==============
+  .header_button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 33px;
+    width: 336px;
+    background-color: transparent;
+    color: var(--accent-color);
+    border: 2px var(--accent-color) solid;
+    padding: 27px 23px 26px 24px;
   }
 }
